--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "reword",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kacperkozak.github.io/Reword",
   "dependencies": {
     "@types/jest": "24.0.11",
     "@types/node": "11.11.3",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
@@ -21,7 +23,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build:storybook": "build-storybook -o build/storybook",
+    "predeploy": "rm -rf dist && npm run build && npm run build:storybook",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
