--- a/package.json
+++ b/package.json
@@ -3,20 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "http://kacperkozak.github.io/Reword",
-  "dependencies": {
-    "@types/jest": "24.0.11",
-    "@types/node": "11.11.3",
-    "@types/react": "16.8.8",
-    "@types/react-dom": "16.8.2",
-    "gh-pages": "^2.0.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8",
-    "seed-random": "^2.2.0",
-    "styled-components": "^4.1.3",
-    "typescript": "^3.3.4000",
-    "uuid": "^3.3.2"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -27,6 +13,34 @@
     "predeploy": "rm -rf dist && npm run build && npm run build:storybook",
     "deploy": "gh-pages -d build"
   },
+  "dependencies": {
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "seed-random": "^2.2.0",
+    "styled-components": "^4.1.3",
+    "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^5.0.3",
+    "@storybook/addon-knobs": "^5.0.3",
+    "@storybook/addon-storysource": "^5.0.3",
+    "@storybook/addon-viewport": "^5.0.3",
+    "@storybook/addons": "^5.0.3",
+    "@storybook/react": "^5.0.3",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.11.7",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.3",
+    "@types/storybook__addon-actions": "^3.4.2",
+    "@types/storybook__addon-knobs": "^4.0.4",
+    "@types/storybook__addon-viewport": "^4.1.0",
+    "@types/storybook__react": "^4.0.1",
+    "@types/styled-components": "^4.1.12",
+    "babel-loader": "^8.0.5",
+    "gh-pages": "^2.0.1",
+    "react-scripts": "^2.1.8",
+    "typescript": "^3.3.4000"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -35,19 +49,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "@storybook/addon-actions": "^5.0.3",
-    "@storybook/addon-knobs": "^5.0.3",
-    "@storybook/addon-storysource": "^5.0.3",
-    "@storybook/addon-viewport": "^5.0.3",
-    "@storybook/addons": "^5.0.3",
-    "@storybook/react": "^5.0.3",
-    "@types/storybook__addon-actions": "^3.4.2",
-    "@types/storybook__addon-knobs": "^4.0.4",
-    "@types/storybook__addon-viewport": "^4.1.0",
-    "@types/storybook__react": "^4.0.1",
-    "@types/styled-components": "^4.1.12",
-    "babel-loader": "^8.0.5"
-  }
+  ]
 }
