--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ cache:
   directories:
     - node_modules
 script:
-  - npm install
   - npm run build
-  - npm run build-storybook
+  - npm run build:storybook
 deploy:
   provider: pages
   skip_cleanup: true
