--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "cSpell.words": [
-        "asdfghjkl",
-        "qwertyuiop",
-        "zxcvbnm"
-    ]
+    "editor.formatOnSave": true,
+    "eslint.enable": true,
+    "eslint.autoFixOnSave": true,
+    "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
+    "cSpell.words": ["asdfghjkl", "qwertyuiop", "zxcvbnm"]
 }
