--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
     "parser": "@typescript-eslint/parser",
+    "plugins": ["react-hooks"],
     "extends": [
         "plugin:@typescript-eslint/recommended",
         "plugin:react/recommended",
@@ -12,6 +13,8 @@
     "rules": {
         "@typescript-eslint/no-use-before-define": false,
         "@typescript-eslint/prefer-interface": false,
-        "@typescript-eslint/explicit-function-return-type": false
+        "@typescript-eslint/explicit-function-return-type": false,
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "error"
     }
 }
