--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-spring": "^8.0.18",
     "seed-random": "^2.2.0",
     "styled-components": "^4.1.3",
     "uuid": "^3.3.2"
