--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-hooks-global-state": "^0.9.0",
     "react-spring": "^8.0.18",
     "seed-random": "^2.2.0",
     "styled-components": "^4.2.0",
