--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "gh-pages": "^2.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
+    "react-scale-text": "^1.2.2",
     "react-scripts": "^2.1.8",
     "typescript": "^3.3.4000"
   },
