--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     }
   },
   "dependencies": {
+    "@types/uuid": "^3.4.4",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-hooks-global-state": "^0.9.0",
