integration with KeyHandler

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-hooks-global-state": "^0.9.0",
+    "react-key-handler": "^1.2.0-beta.3",
     "react-spring": "^8.0.18",
     "seed-random": "^2.2.0",
     "styled-components": "^4.2.0",
