--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
 script:
   - npm run test
   - npm run build
+  - npm run build:dictionary
   - npm run build:storybook
 deploy:
   provider: pages
