--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     }
   },
   "dependencies": {
+    "@sentry/browser": "^5.1.1",
     "@types/uuid": "^3.4.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
