--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@sentry/browser": "^5.1.1",
     "@types/uuid": "^3.4.4",
+    "firebase": "^6.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hooks-global-state": "^0.9.0",
