--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hooks-global-state": "^0.9.0",
     "react-key-handler": "^1.2.0-beta.3",
     "react-spring": "^8.0.19",
+    "react-transition-group": "^4.0.1",
     "seed-random": "^2.2.0",
     "styled-components": "^4.2.0",
     "uuid": "^3.3.2"
@@ -55,6 +56,7 @@
     "@types/node": "^11.13.4",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "@types/react-transition-group": "^2.9.1",
     "@types/storybook__addon-actions": "^3.4.2",
     "@types/storybook__addon-knobs": "^4.0.5",
     "@types/storybook__addon-viewport": "^4.1.0",
@@ -73,7 +75,7 @@
     "lint-staged": "^8.1.5",
     "react-scale-text": "^1.2.2",
     "react-scripts": "^2.1.8",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.5.0-rc"
   },
   "browserslist": [
     ">0.2%",
