--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
     "cSpell.words": [
         "asdfghjkl",
+        "firestore",
         "qwertyuiop",
         "zxcvbnm"
     ],
