--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "lint-staged": "^8.1.5",
     "react-scale-text": "^1.2.2",
     "react-scripts": "^2.1.8",
-    "typescript": "^3.5.0-rc"
+    "typescript": "^3.5.2"
   },
   "browserslist": [
     ">0.2%",
