--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "eslint.autoFixOnSave": true,
     "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
     "cSpell.words": [
+        "Droppable",
         "asdfghjkl",
         "firestore",
         "qwertyuiop",
