--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@types/uuid": "^3.4.4",
     "firebase": "^6.0.4",
     "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.4",
     "react-dom": "^16.8.6",
     "react-hooks-global-state": "^0.9.0",
     "react-key-handler": "^1.2.0-beta.3",
     "react-spring": "^8.0.19",
     "react-transition-group": "^4.0.1",
+    "react-use": "^9.7.1",
     "seed-random": "^2.2.0",
     "styled-components": "^4.2.0",
     "uuid": "^3.3.2"
@@ -55,6 +57,7 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.4",
     "@types/react": "^16.8.13",
+    "@types/react-beautiful-dnd": "^11.0.2",
     "@types/react-dom": "^16.8.4",
     "@types/react-transition-group": "^2.9.1",
     "@types/storybook__addon-actions": "^3.4.2",
