--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,6 @@
         "@typescript-eslint/prefer-interface": false,
         "@typescript-eslint/explicit-function-return-type": false,
         "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "error"
+        "react-hooks/exhaustive-deps": "off"
     }
 }
