--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
         "@typescript-eslint/prefer-interface": false,
         "@typescript-eslint/explicit-function-return-type": false,
         "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "off"
+        "react-hooks/exhaustive-deps": "off",
+        "no-warning-comments": "error"
     }
 }
