--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "dictionary": "node dictionary",
+    "typecheck": "tsc --noEmit",
     "storybook": "start-storybook -s ./build -p 6006",
     "build:storybook": "build-storybook -s ./build -o build/storybook",
     "predeploy": "rm -rf dist && npm run build && npm run build:storybook && npm run build:dictionary",
