--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,19 @@
     "semi": false,
     "singleQuote": true,
     "trailingComma": "es5",
-    "tabWidth": 4
+    "tabWidth": 4,
+    "overrides": [
+        {
+            "files": "*.yml",
+            "options": {
+                "tabWidth": 2
+            }
+        },
+        {
+            "files": "*.json",
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
 }
