--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "http://reword.9px.pl/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "ts": "tsc --noEmit"
+    "ts": "tsc --noEmit",
+    "dictionary": "node dictionary"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
@@ -15,9 +17,8 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-key-handler": "1.2.0-beta.3",
-    "react-router-dom": "^6.3.0",
-    "react-spring": "^9.5.2",
+    "react-router-dom": "^6.4.0",
+    "react-spring": "^9.5.4",
     "react-transition-group": "^4.4.5",
     "react-use": "^17.4.0",
     "reactfire": "^4.2.2",
@@ -25,13 +26,14 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
+    "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@types/react-key-handler": "^1.2.0",
     "@types/react-transition-group": "^4.4.5",
     "@types/seed-random": "^2.2.1",
-    "@vitejs/plugin-react": "^2.0.1",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "@vitejs/plugin-react": "^2.1.0",
+    "cheerio": "1.0.0-rc.12",
+    "typescript": "^4.8.3",
+    "vite": "^3.1.0"
   }
 }
